// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reminder renders correctly when bordered 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-1qcp5n {
=======
  .emotion-1 {
>>>>>>> fix: adds tests
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

<<<<<<< HEAD
.cache-1qcp5n.cache-1qcp5n {
=======
.emotion-1.emotion-1 {
>>>>>>> fix: adds tests
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

<<<<<<< HEAD
.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
=======
.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-4>p {
  display: inline;
}

.emotion-11 {
>>>>>>> fix: adds tests
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.cache-h2mt8r.cache-h2mt8r {
=======
.emotion-11.emotion-11 {
>>>>>>> fix: adds tests
  vertical-align: middle;
  margin-left: 4px;
}

<a
<<<<<<< HEAD
    class="eobtj840 cache-1qcp5n e7ah3bn0"
=======
    class="emotion-0 emotion-1 emotion-2"
>>>>>>> fix: adds tests
    icon="east"
    type="button"
  >
    <span
<<<<<<< HEAD
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p
        class="cache-11djngs e7ah3bn0"
      >
        <span
          class="cache-11djngs e7ah3bn0"
=======
      class="emotion-3 emotion-4 emotion-2"
    >
      <p
        class="emotion-6 emotion-2"
      >
        <span
          class="emotion-6 emotion-2"
>>>>>>> fix: adds tests
        >
          This is a sample Test
        </span>
      </p>
    </span>
    <svg
<<<<<<< HEAD
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
=======
      class="sc-ui-icon emotion-10 emotion-11 emotion-2"
>>>>>>> fix: adds tests
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with bold 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-1qcp5n {
=======
  .emotion-1 {
>>>>>>> fix: adds tests
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

<<<<<<< HEAD
.cache-1qcp5n.cache-1qcp5n {
=======
.emotion-1.emotion-1 {
>>>>>>> fix: adds tests
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

<<<<<<< HEAD
.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
=======
.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-4>p {
  display: inline;
}

.emotion-15 {
>>>>>>> fix: adds tests
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.cache-h2mt8r.cache-h2mt8r {
=======
.emotion-15.emotion-15 {
>>>>>>> fix: adds tests
  vertical-align: middle;
  margin-left: 4px;
}

<a
<<<<<<< HEAD
    class="eobtj840 cache-1qcp5n e7ah3bn0"
=======
    class="emotion-0 emotion-1 emotion-2"
>>>>>>> fix: adds tests
    icon="east"
    type="button"
  >
    <span
<<<<<<< HEAD
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p
        class="cache-11djngs e7ah3bn0"
      >
        <span
          class="cache-11djngs e7ah3bn0"
        >
          This is a
        </span>
        <strong>
          <span
            class="cache-11djngs e7ah3bn0"
=======
      class="emotion-3 emotion-4 emotion-2"
    >
      <p
        class="emotion-6 emotion-2"
      >
        <span
          class="emotion-6 emotion-2"
        >
          This is a
        </span>
        <strong>
          <span
            class="emotion-6 emotion-2"
>>>>>>> fix: adds tests
          >
            bold
          </span>
        </strong>
        <span
<<<<<<< HEAD
          class="cache-11djngs e7ah3bn0"
=======
          class="emotion-6 emotion-2"
>>>>>>> fix: adds tests
        >
           Test
        </span>
      </p>
    </span>
    <svg
<<<<<<< HEAD
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
=======
      class="sc-ui-icon emotion-14 emotion-15 emotion-2"
>>>>>>> fix: adds tests
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with default values 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-by3y5b {
=======
  .emotion-1 {
>>>>>>> fix: adds tests
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: #e4edff;
  border: 1px solid transparent;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

<<<<<<< HEAD
.cache-by3y5b.cache-by3y5b {
=======
.emotion-1.emotion-1 {
>>>>>>> fix: adds tests
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<<<<<<< HEAD
.cache-by3y5b:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.cache-by3y5b:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

<<<<<<< HEAD
.cache-by3y5b strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
=======
.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-4>p {
  display: inline;
}

.emotion-11 {
>>>>>>> fix: adds tests
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.cache-h2mt8r.cache-h2mt8r {
=======
.emotion-11.emotion-11 {
>>>>>>> fix: adds tests
  vertical-align: middle;
  margin-left: 4px;
}

<a
<<<<<<< HEAD
    class="eobtj840 cache-by3y5b e7ah3bn0"
=======
    class="emotion-0 emotion-1 emotion-2"
>>>>>>> fix: adds tests
    icon="east"
    type="button"
  >
    <span
<<<<<<< HEAD
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p
        class="cache-11djngs e7ah3bn0"
      >
        <span
          class="cache-11djngs e7ah3bn0"
=======
      class="emotion-3 emotion-4 emotion-2"
    >
      <p
        class="emotion-6 emotion-2"
      >
        <span
          class="emotion-6 emotion-2"
>>>>>>> fix: adds tests
        >
          This is a sample Test
        </span>
      </p>
    </span>
    <svg
<<<<<<< HEAD
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
=======
      class="sc-ui-icon emotion-10 emotion-11 emotion-2"
>>>>>>> fix: adds tests
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with variant 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  .cache-1qcp5n {
=======
  .emotion-1 {
>>>>>>> fix: adds tests
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

<<<<<<< HEAD
.cache-1qcp5n.cache-1qcp5n {
=======
.emotion-1.emotion-1 {
>>>>>>> fix: adds tests
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.cache-1qcp5n:hover {
=======
.emotion-1:hover {
>>>>>>> fix: adds tests
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

<<<<<<< HEAD
.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
=======
.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-4>p {
  display: inline;
}

.emotion-11 {
>>>>>>> fix: adds tests
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.cache-h2mt8r.cache-h2mt8r {
=======
.emotion-11.emotion-11 {
>>>>>>> fix: adds tests
  vertical-align: middle;
  margin-left: 4px;
}

<a
<<<<<<< HEAD
    class="eobtj840 cache-1qcp5n e7ah3bn0"
=======
    class="emotion-0 emotion-1 emotion-2"
>>>>>>> fix: adds tests
    icon="east"
    type="button"
  >
    <span
<<<<<<< HEAD
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p
        class="cache-11djngs e7ah3bn0"
      >
        <span
          class="cache-11djngs e7ah3bn0"
=======
      class="emotion-3 emotion-4 emotion-2"
    >
      <p
        class="emotion-6 emotion-2"
      >
        <span
          class="emotion-6 emotion-2"
>>>>>>> fix: adds tests
        >
          This is a sample Test
        </span>
      </p>
    </span>
    <svg
<<<<<<< HEAD
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
=======
      class="sc-ui-icon emotion-10 emotion-11 emotion-2"
>>>>>>> fix: adds tests
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;
